[package]
name = "dcsrs-to-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
async-std = { version = "1.13.0", features = ["attributes"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main" }
futures = "0.3.31"
url = "2.5.4"
